


syntax = "proto3";

package servicios;
option go_package = "/serviciosStreaming";

service AudioService {
  // Streaming de canci√≥n
  rpc enviarCancionMedianteStream(peticionDTO) returns (stream fragmentoCancion);
}

message peticionDTO {
  int32 id = 1; 
  string formato = 2;
}

message fragmentoCancion {
  bytes data = 1; // Fragmento de audio
}


